// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationCard should render correctly - no data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="configuration-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-1"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-3"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="Configuration title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="Configuration title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Installed packages
                  </span>
                </dt>
                <dd
                  aria-label="Installed packages value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Installed packages value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Services
                  </span>
                </dt>
                <dd
                  aria-label="Services value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Services value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Running processes
                  </span>
                </dt>
                <dd
                  aria-label="Running processes value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Running processes value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Repositories
                  </span>
                </dt>
                <dd
                  aria-label="Repositories value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Repositories value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfigurationCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="configuration-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-4"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-6"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="Configuration title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="Configuration title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Installed packages
                  </span>
                </dt>
                <dd
                  aria-label="Installed packages value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Installed packages value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/installed_packages"
                      >
                        1 package
                      </a>
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Services
                  </span>
                </dt>
                <dd
                  aria-label="Services value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Services value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/services"
                      >
                        1 service
                      </a>
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Running processes
                  </span>
                </dt>
                <dd
                  aria-label="Running processes value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Running processes value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/running_processes"
                      >
                        1 process
                      </a>
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Repositories
                  </span>
                </dt>
                <dd
                  aria-label="Repositories value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Repositories value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/repositories"
                      >
                        1 enabled
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfigurationCard should render enabled/disabled 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="configuration-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-7"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-9"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="Configuration title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="Configuration title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Installed packages
                  </span>
                </dt>
                <dd
                  aria-label="Installed packages value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Installed packages value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/installed_packages"
                      >
                        1 package
                      </a>
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Services
                  </span>
                </dt>
                <dd
                  aria-label="Services value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Services value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/services"
                      >
                        1 service
                      </a>
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Running processes
                  </span>
                </dt>
                <dd
                  aria-label="Running processes value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Running processes value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/running_processes"
                      >
                        1 process
                      </a>
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Repositories
                  </span>
                </dt>
                <dd
                  aria-label="Repositories value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Repositories value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/repositories"
                      >
                        1 enabled / 1 disabled
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfigurationCard should render extra 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="configuration-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-37"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-39"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="Configuration title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="Configuration title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Installed packages
                  </span>
                </dt>
                <dd
                  aria-label="Installed packages value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Installed packages value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/installed_packages"
                      >
                        1 package
                      </a>
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Services
                  </span>
                </dt>
                <dd
                  aria-label="Services value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Services value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/services"
                      >
                        1 service
                      </a>
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Running processes
                  </span>
                </dt>
                <dd
                  aria-label="Running processes value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Running processes value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/running_processes"
                      >
                        1 process
                      </a>
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Repositories
                  </span>
                </dt>
                <dd
                  aria-label="Repositories value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Repositories value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/repositories"
                      >
                        1 enabled
                      </a>
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    something
                  </span>
                </dt>
                <dd
                  aria-label="something value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="something value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    test
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    with click
                  </span>
                </dt>
                <dd
                  aria-label="with click value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="with click value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/undefined"
                      >
                        1 tests
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
